[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apigen"
version = "0.0.1"
description = "A Django API toolkit for response utilities, exceptions, middleware, and alert handlers."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ram Sutahr", email = "ramsuthar305@gmail.com" }]
requires-python = ">=3.7"
dependencies = [
    "Django>=3.2"
]

[project.urls]
Homepage = "https://github.com/ramsuthar305/apigen"
Issues = "https://github.com/ramsuthar305/apigen/issues"

[tool.setuptools]
package-dir = { "" = "src" }
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
