[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apigen"
version = "0.1.0"
description = "A Django API toolkit for response utilities, exceptions, middleware, and alert handlers."
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Ram Suthar", email = "ramsuthar305@gmail.com"}
]
dependencies = ["django"]
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]